# GSUSoftware

./: .gitignore  CITIROC_SC_PROFILE1.txt  CMakeLists.txt  FEBDAQMULT_GSU.C  FEBDTP.cxx  FEBDTP.hxx  FEBDTP_LinkDef.h  HCAL_GUI.C  HCAL_GUI_test.C  Makefile  README.markdown  README.md  ReadBitStream.C  TileIds.txt  bank.pl  compile  geometry.pl  hit.pl  materials.pl  meic_det1.gcard  meic_det1_fieldOn.gcard  meic_det1_rich_detector_holder.gdml  run.csh  vis.mac
BeamTest_mRICH/: .gitignore
BeamTest_mRICH/macros/: clean.csh
BeamTest_mRICH/src/BeamTest/BeamFinder/: BeamFinder.cxx  BeamFinder.h  CMakeLists.txt
BeamTest_mRICH/src/BeamTest/Calibration/: CMakeLists.txt  Calibration.h
BeamTest_mRICH/src/BeamTest/RingFinder/: CMakeLists.txt
EventPlaneReconstruction/: BbcPhiWeightCorrection.txt  BbcRecalConsts.txt  Makefile.am  PhEventPlaneMaker.cxx  PhEventPlaneMaker.h  PhVecMesonCons.h  RecoEPHistoManager.cxx  RecoEPHistoManager.h  RecoEPHistoManagerLinkDef.h  RecoEPProManager.cxx  RecoEPProManager.h  RecoEPUtility.cxx  RecoEventPlane.cxx  RecoEventPlaneLinkDef.h  configure.ac  file_AuAu200GeV_ReCenterPar.root
FillEllipticFlow/: Makefile.am  PhDiMuonCut.cxx  PhDiMuonCut.h  PhDiMuonCutLinkDef.h  PhDiMuonEvent.h  PhDiMuonHistoManager.cxx  PhDiMuonHistoManager.h  PhDiMuonUtility.cxx  PhDiMuonUtility.h  PhDiMuonUtilityLinkDef.h  PhVecMesonAna.cxx  PhVecMesonAna.h  PhVecMesonAnaLinkDef.h  PhVecMesonCons.h  Run14AuAuList.h  configure.ac  file_AuAu200GeV_Resolution.root
GSU_HCAL_GUI/: .gitignore  CITIROC_SC_PROFILE1.txt  FEBDTP.cxx  FEBDTP.hxx  rootlogon.C
LocalDataBase/: README
LocalRootBase/: README
RecoEventPlane/: Makefile.am  RecoEPHistoManager.cxx  RecoEPHistoManager.h  RecoEPUtility.cxx  RecoEPUtility.h  RecoEventPlane.cxx  RecoEventPlane.h  RecoEventPlaneLinkDef.h  configure.ac  configure.in
TreeProduction/: Makefile.am  PhDiMuonEvent.h  PhVecMesonCons.h  PhVecMesonMaker.cxx  PhVecMesonMaker.h  PhVecMesonMakerLinkDef.h  RecoEPHistoManager.cxx  RecoEPHistoManager.h  RecoEPProManager.cxx  RecoEPProManager.h  RecoEPUtility.cxx  RecoEPUtility.h  RecoEventPlane.cxx  RecoEventPlane.h  configure.ac  file_AuAu200GeV_ReCenter.root  file_AuAu200GeV_ReCenterPar.root  file_AuAu200GeV_Resolution.root  file_AuAu200GeV_ShiftPar.root
VecMesonAnalysis/: .gitignore
VecMesonAnalysis/EventPlaneReconstruction/: PhEventPlaneMakerLinkDef.h  RecoEPUtility.cxx  RecoEPUtilityLinkDef.h  runIndex.txt
VecMesonAnalysis/FillEllipticFlow/: Makefile.am  PhDiMuonEventLinkDef.h  PhDiMuonHistoManagerLinkDef.h  PhDiMuonUtility.cxx
VecMesonAnalysis/TreeProduction/: PhDiMuonEvent.cxx  RecoEPHistoManager.cxx  RecoEPHistoManager.h  RecoEPProManagerLinkDef.h
VecMesonAnalysis/list/: allRuns.list  picoDst_test.list  split_list_lowup.sh
analysis/: RIngfinder.C  analysis.C
condor/: example.job  submit.csh
condor/FillEllipticFlow/: example.job  run_FillEllipticFlow.csh  submit.csh
condor/TreeProduction/: example.job  submit.csh
geo/: detector.pl
include/BeamTest/: Calibration.h  PixelMap.h
list/: make_picoDst_list.csh  split_list.sh
list/DiMuonList/: DiMuon_Run14AuAu200GeV.list  Split_DiMuon_Run14AuAu200GeV_121_160.list  Split_DiMuon_Run14AuAu200GeV_161_200.list  Split_DiMuon_Run14AuAu200GeV_241_280.list  Split_DiMuon_Run14AuAu200GeV_281_320.list  Split_DiMuon_Run14AuAu200GeV_321_360.list  Split_DiMuon_Run14AuAu200GeV_361_400.list  Split_DiMuon_Run14AuAu200GeV_441_480.list  Split_DiMuon_Run14AuAu200GeV_481_520.list  Split_DiMuon_Run14AuAu200GeV_601_640.list  Split_DiMuon_Run14AuAu200GeV_641_680.list  Split_DiMuon_Run14AuAu200GeV_721_760.list  Split_DiMuon_Run14AuAu200GeV_761_800.list  Split_DiMuon_Run14AuAu200GeV_801_840.list  Split_DiMuon_Run14AuAu200GeV_841_880.list  Split_DiMuon_Run14AuAu200GeV_881_920.list  make_DiMuonList.csh
list/run_list/: Split_picoDst_Run14AuAu200GeV_0.list  Split_picoDst_Run14AuAu200GeV_10.list  Split_picoDst_Run14AuAu200GeV_1000.list  Split_picoDst_Run14AuAu200GeV_1007.list  Split_picoDst_Run14AuAu200GeV_1010.list  Split_picoDst_Run14AuAu200GeV_1011.list  Split_picoDst_Run14AuAu200GeV_1012.list  Split_picoDst_Run14AuAu200GeV_1013.list  Split_picoDst_Run14AuAu200GeV_1014.list  Split_picoDst_Run14AuAu200GeV_1015.list  Split_picoDst_Run14AuAu200GeV_1016.list  Split_picoDst_Run14AuAu200GeV_1017.list  Split_picoDst_Run14AuAu200GeV_1018.list  Split_picoDst_Run14AuAu200GeV_1019.list  Split_picoDst_Run14AuAu200GeV_1021.list  Split_picoDst_Run14AuAu200GeV_1022.list  Split_picoDst_Run14AuAu200GeV_103.list  Split_picoDst_Run14AuAu200GeV_104.list  Split_picoDst_Run14AuAu200GeV_105.list  Split_picoDst_Run14AuAu200GeV_106.list  Split_picoDst_Run14AuAu200GeV_11.list  Split_picoDst_Run14AuAu200GeV_112.list  Split_picoDst_Run14AuAu200GeV_113.list  Split_picoDst_Run14AuAu200GeV_114.list  Split_picoDst_Run14AuAu200GeV_115.list  Split_picoDst_Run14AuAu200GeV_116.list  Split_picoDst_Run14AuAu200GeV_118.list  Split_picoDst_Run14AuAu200GeV_119.list  Split_picoDst_Run14AuAu200GeV_12.list  (+504 more)
macro/: AuAu14.list  AuAu14_BBCEP_test.list  Fun4All_PhEventPlaneMaker.C  Fun4All_PhVecMesonMaker.C  Fun4All_PhVecMesonMaker_AuAu14.C  Fun4All_RecoEventPlane.C  Fun4All_RecoEventPlane_vecmeson_AuAu14.C  PhVecMesonAna.C  Run_PhVecMesonMakerAuAuRun14.C  Run_PhVecMesonMaker_AuAu14.C  Run_RecoEventPlane_vecmeson_AuAu14.C  genRunIndex.C  picoDst_AuAuRun14.list  picoDst_test.list  plotQA_EventPlane.C  plotQA_Global.C  plotQA_QVector.C  plotQA_ReCenter.C  saveReCenterPar.C  saveShiftPar.C
macro/QA/: calEPResolution.C  (+8 more)
macros/: clean.csh
modular_rich/: README  bank.pl  meic_det1_fieldOn.gcard  mirrors.pl  run.csh
src/BeamTest/Calibration/: CMakeLists.txt  Calibration.cxx  Calibration.h  CalibrationLinkDef.h
src/BeamTest/PixelMap/: CMakeLists.txt  PixelMap.cxx  PixelMap.h  PixelMapLinkDef.h  mRICH.h
src/Simulation/Calibration/: CMakeLists.txt  gemcCalibration.cxx  gemcCalibration.h  gemcCalibrationLinkDef.h
src/Simulation/Material/: CMakeLists.txt  Material.cxx  Material.h  MaterialLinkDef.h  mRICH.h
src/Simulation/RingFinder/: CMakeLists.txt  RingFinder.cxx  RingFinder.h  RingFinderLinkDef.h
(+631 files in other folders)
